--- a/.github/workflows/deploy_to_ecs.yml
+++ b/.github/workflows/deploy_to_ecs.yml
@@ -32,6 +32,7 @@ jobs:
     - name: Run tests
       run: npm test
   deploy:
+    needs: test
     name: Deploy
     runs-on: ubuntu-latest
     environment: uat
