--- a/.github/workflows/deploy_to_ecs.yml
+++ b/.github/workflows/deploy_to_ecs.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Build Docker image
+    - name: Install dependencies
       run: npm ci
 
     - name: Run tests
